# Euterpe

./: .gitignore  CMakeLists.txt  FloatTable.cpp  FloatTable.h  FloatTable.ui  GetFrameData.cpp  GetFrameData.h  MediaItemBox.cpp  MediaItemBox.h  MediaItemBox.ui  MediaList.cpp  MediaList.h  MediaListBox.cpp  MediaListBox.h  MediaListBox.ui  Player.cpp  Player.h  Player.ui  PlayerController.cpp  PlayerController.h  PlayerShortcut.cpp  PlayerShortcut.h  Player_Shortcut.cpp  Player_Shortcut.h  ProgressSlider.cpp  ProgressSlider.h  README.md  main.cpp  player.cpp  player.h  player.ui  res.qrc  ui_Player.h
MediaList/: MediaItemBox.cpp  MediaItemBox.h  MediaList.cpp  MediaList.h  MediaListSql.cpp  MediaListSql.h
MetaData/: MetaData.cpp  MetaData.h  MetaDataFloatTable.cpp  MetaDataFloatTable.h
Player/: FrameData.cpp  FrameData.h  GetFrameData.cpp  GetFrameData.h  Player.cpp  Player.h  ProgressSlider.cpp  ProgressSlider.h
PlayerController/: PlayerController.cpp  PlayerController.h  PlayerShortcut.cpp  PlayerShortcut.h
UI/: MediaItemBox.ui  MetaDataFloatTable.ui  Player.ui  res.qrc
UI/qss/: main.qss
qss/: main.qss
